# sicd-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/dep/v0_4_0/: antenna.rs  collection_info.rs  error_statistics.rs  geo_data.rs  grid.rs  image_creation.rs  image_data.rs  image_formation.rs  mod.rs  pfa.rs  position.rs  radar_collection.rs  scpcoa.rs  timeline.rs
src/dep/v0_5_0/: grid.rs
src/v1_3_0/: antenna.rs  error_statistics.rs  geo_data.rs  image_formation.rs  match_info.rs  mod.rs  radar_collection.rs  radiometric.rs  scpcoa.rs
tests/: parse_gen_xml.rs
